Fixed text alignment in header and card section

--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,10 @@ a {
 
 .header-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   color: #e5e7eb;
+  gap: 25px;
 }
 
 .text-container {
@@ -85,6 +87,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  height: 250px;
   width: 500px;
 }
 
@@ -105,6 +109,7 @@ a {
   font-size: 36px;
   font-weight: 800;
   color: #1f2937;
+  text-align: center;
 }
 
 .card-container {
